Bug 129221 - Numbered bullets don't restart after header in importred .docx file
Summary: Numbered bullets don't restart after header in importred .docx file
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.3 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.0.0 target:6.4.2
Keywords: bibisected, bisected, filter:docx, regression
Depends on:
Blocks: DOCX-Bullet-Number-Outline-Lists
  Show dependency treegraph
 
Reported: 2019-12-06 05:35 UTC by konsultor
Modified: 2020-02-14 16:15 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
docx version of file with list numbering not resetting after header (29.24 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-12-07 21:45 UTC, konsultor
Details
PDF version of file with problem in list numering not restarting after header (28.39 KB, application/pdf)
2019-12-07 21:49 UTC, konsultor
Details
sample .docx file where numbered lists don't restart after headings (42.03 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2020-01-22 21:24 UTC, konsultor
Details
sample .docx compared in MSO 2013 and LO 6.5+ (53.10 KB, image/jpeg)
2020-01-23 08:23 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description konsultor 2019-12-06 05:35:41 UTC
Description:
Original Word docx has numbered lists under subheads.  Numbering restarts with "1" after each subhead.  When opened by LO 6.2.7.1 (from openSuSe) the list numbering continues through the subheads and does not restart at "1" each time.
Saving file as .odt preserves this error.

Steps to Reproduce:
1.  Open .docx file
2.  Numbered lists continue through subheads
3.

Actual Results:
Numbered lists do not restart at "1" after subhead

Expected Results:
Numbered lists start with "1" after a header.


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Have seen his file display by Word and numbering restarts after headers.

Version: 6.2.7.1
Build ID: 20(Build:1)
CPU threads: 12; OS: Linux 4.12; UI render: default; VCL: kde5; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 Dieter 2019-12-06 07:36:46 UTC Comment hidden (obsolete)
Comment 2 konsultor 2019-12-07 21:45:09 UTC Comment hidden (obsolete)
Comment 3 konsultor 2019-12-07 21:49:38 UTC Comment hidden (obsolete)
Comment 4 Timur 2019-12-08 08:24:08 UTC
If we start from .docx it has to be MSO docx, and you say it is. 
But looking at it, it was last saved with LO. So we cannot use it. The list numbering continues also if it opens in MSO. 
If you have MSO docx, attach it.
Even if not, there are other fixed and open bugs on this, you were supposed to search first, please do it now.
Comment 5 konsultor 2019-12-08 15:25:02 UTC Comment hidden (obsolete)
Comment 6 Timur 2019-12-08 17:44:10 UTC Comment hidden (obsolete)
Comment 7 konsultor 2020-01-09 16:58:17 UTC Comment hidden (obsolete)
Comment 8 QA Administrators 2020-01-10 04:12:09 UTC Comment hidden (obsolete)
Comment 9 Timur 2020-01-10 09:06:32 UTC Comment hidden (obsolete)
Comment 10 konsultor 2020-01-22 21:24:41 UTC
Created attachment 157344 [details]
sample .docx file where numbered lists don't restart after headings

This file was edited down from a confidential document in Word 2013 and saved in Word (bless the library where I used a Win computer).  In Word the numbered items after each header start with 1.  In LO 6.3.3 (latest from OpenSuse) the numbered paragraphs of the same style (same indent) show continuous numbering across headers--there is one sequence for the entire page.
Comment 11 konsultor 2020-01-22 21:42:52 UTC
(In reply to Timur from comment #4)
> If you have MSO docx, attach it.
done

> Even if not, there are other fixed and open bugs on this, you were supposed
> to search first, please do it now.
One bug that may be related is Bug 40272 - Filesave ODT as DOC/DOCX conversion problem with continued instead of restarted numbering.
Comment 12 Timur 2020-01-23 08:23:37 UTC
Created attachment 157350 [details]
sample .docx compared in MSO 2013 and LO 6.5+

I reproduce in Win LO 6.5+ with MSO DOCX attachment 157344 [details].
This is fileopen issue and only in those we may look for a similar bug.
No repro 4.3, repro 4.4. Regression.
Comment 13 Aron Budea 2020-01-25 22:20:29 UTC
This went bad in to steps, bibisected using repo bibisect-44max.
First the numbering stopped getting imported with following commit:
https://cgit.freedesktop.org/libreoffice/core/commit/?id=e49d2b31fb2020d065b4ad940d1031d07b10f32b
author		Vinaya Mandke <vinaya.mandke@synerzip.com>	2014-06-06 14:12:48 +0530
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2014-06-10 09:57:45 +0200

"fdo#78939 [DOCX] Hang while opening due to incorrect modification of Style"

Then the numbering came back, but didn't restart anymore:
https://cgit.freedesktop.org/libreoffice/core/commit/?id=c03b691a7cd8eba128204c851b99e0b75c580c0c
author		Miklos Vajna <vmiklos@collabora.co.uk>	2014-11-17 16:54:12 +0100
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2014-11-17 16:55:12 +0100

"DOCX import: handle <w:numId> from parent styles as well"

Adding CC: to Miklos Vajna.
Comment 14 Commit Notification 2020-02-11 08:08:11 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/63d3ac37865460ff51348a6e792bbacf2f7c4653

tdf#129221 DOCX import: fix missing restart of numbering

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2020-02-11 18:46:10 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/58d2d3480018986835384ac12307131a6d30997f

tdf#129221 DOCX import: fix missing restart of numbering

It will be available in 6.4.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Xisco Faulí 2020-02-12 09:57:03 UTC
Verified in

Version: 7.0.0.0.alpha0+
Build ID: 718f540fb63af27c1336f89213444e9af753b8a9
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

@Miklos, thanks for fixing this issue!!